cleaning up all dash templates

--- a/openstack-dashboard/dashboard/templates/dash_images.html
+++ b/openstack-dashboard/dashboard/templates/dash_images.html
@@ -8,30 +8,12 @@
   {% endwith %}
 {% endblock %}
 
-{% block main %}
-  <div id='page_header'>
-    <h2><span>Compute:</span> Images</h2>
-    <p class='desc'><span>&mdash;</span> Images are virtual machines used to create Instances.</p>
-  </div>
-  {% include "_messages.html" %}
+{% block page_title %}Images{% endblock %}
+{% block refresh_link %}{% url dash_images request.user.tenant %}{% endblock refresh_link %}
 
-  <div class='main_content'>
-    {% if images %}
-      <div class='table_title wide'>
-        <h3>Images</h3>
-        <a class="refresh" title="Refresh" href="{% url dash_images request.user.tenant %}">Refresh List</a>
-        <div class='search'>
-          <form action='' method='post'>
-            <fieldset>
-              <label for='table_search'>Search</label>
-              <input id='table_search' name='search' type='text' value='' />
-            </fieldset>
-          </form>
-        </div>
-      </div>
+{% block dash_main %}
+  {% if images %}
+    {% include '_image_list.html' %}
 
-      {% include '_image_list.html' %}
-
-    {% endif %}
-  </div>
+  {% endif %}
 {% endblock %}
