--- a/openstack-dashboard/dashboard/templates/dash_keypairs.html
+++ b/openstack-dashboard/dashboard/templates/dash_keypairs.html
@@ -1,5 +1,5 @@
 {% extends 'dash_base.html' %}
-{# list of user's keypairs #}
+{# list of user's images #}
 {# standard nav, sidebar, list of images in main #}
 
 {% block sidebar %}
@@ -8,37 +8,17 @@
   {% endwith %}
 {% endblock %}
 
-{% block main %}
-  <div id='page_header'>
-    <h2><span>Compute:</span> Keypairs</h2> 
-    <p class='desc'><span>&mdash;</span> Manage keypairs that allow instance authentication.</p> 
-  </div>
-  {% include "_messages.html" %}
+{% block page_title %}Keypairs{% endblock %}
+{% block refresh_link %}{% url dash_keypairs request.user.tenant %}{% endblock refresh_link %}
 
-  <div class='main_content'>
-    {% if keypairs %}
-      <div class='table_title wide'>
-        <h3>Keypairs</h3>
-        <a class="refresh" title="Refresh" href="{% url dash_keypairs request.user.tenant %}">Refresh List</a>
-        <div class='search'>
-          <form action='' method='post'>
-            <fieldset>
-              <label for='table_search'>Search</label>
-              <input id='table_search' name='search' type='text' value='' />
-            </fieldset>
-          </form>
-        </div>
-      </div>
-
-      {% include '_keypair_list.html' %}
-
-       <a id="keypairs_create_link" class="action_link large-rounded" href="{% url dash_keypairs_create request.user.tenant %}">Create New Keypair</a>
-    {% else %}
-        <div class="status_box info">
-          <h2>Info</h2>
-          <p>There are currently no keypairs. <a href='{% url dash_keypairs_create request.user.tenant %}'>Create A Keypair &gt;&gt;</a></p>
-        </div>
-    {% endif %}
-  </div>
+{% block dash_main %}
+  {% if keypairs %}
+    {% include '_keypair_list.html' %}
+    <a id="keypairs_create_link" class="action_link large-rounded" href="{% url dash_keypairs_create request.user.tenant %}">Create New Keypair</a>
+  {% else %}
+    <div class="status_box info">
+      <h2>Info</h2>
+      <p>There are currently no keypairs. <a href='{% url dash_keypairs_create request.user.tenant %}'>Create A Keypair &gt;&gt;</a></p>
+    </div>
+  {% endif %}
 {% endblock %}
-
