--- a/openstack-dashboard/dashboard/templates/syspanel_base.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_base.html
@@ -22,7 +22,7 @@
             </fieldset>
           </form>
         </div>
-        <a <a class="refresh" title="Refresh" href="{% block refresh_link %}{% endblock refresh_link %}">Refresh List</a>
+        <a class="refresh" title="Refresh" href="{% block refresh_link %}{% endblock refresh_link %}">Refresh List</a>
       </div>
       
     </div>
