--- a/openstack-dashboard/dashboard/templates/dash_base.html
+++ b/openstack-dashboard/dashboard/templates/dash_base.html
@@ -11,17 +11,19 @@
   {% block page_header %}
     <div id='page_header'>
       <h2>{% block page_title %}{% endblock %}</h2>
-      <div class="right">
-        <div class='search'>
-          <form action='' method='post'>
-            <fieldset>
-              <label for='table_search'>Search</label>
-              <input id='table_search' name='search' type='text' value='' />
-            </fieldset>
-          </form>
+      {% if block page_title %}
+        <div class="right">
+          <div class='search'>
+            <form action='' method='post'>
+              <fieldset>
+                <label for='table_search'>Search</label>
+                <input id='table_search' name='search' type='text' value='' />
+              </fieldset>
+            </form>
+          </div>
+          <a class="refresh" title="Refresh" href="{% block refresh_link %}{% endblock refresh_link %}">Refresh List</a>
         </div>
-        <a <a class="refresh" title="Refresh" href="{% block refresh_link %}{% endblock refresh_link %}">Refresh List</a>
-      </div>
+      {% endif %}
     </div>
   {% endblock %}
 
