--- a/openstack-dashboard/dashboard/templates/dash_keypairs_create.html
+++ b/openstack-dashboard/dashboard/templates/dash_keypairs_create.html
@@ -20,7 +20,10 @@
   </script>
 {% endblock %}
 
-{% block page_title %}Create Keypair{% endblock %}
+{% block page_header %}
+  {# to make searchable false, just remove it from the include statement #}
+  {% include "_page_header.html" with title="Create Keypair" %}
+{% endblock page_header %}
 
 {% block dash_main %}
   <div class="dash_block wide form">
