--- a/openstack-dashboard/dashboard/templates/dash_usage.html
+++ b/openstack-dashboard/dashboard/templates/dash_usage.html
@@ -8,7 +8,10 @@
   {% endwith %}
 {% endblock %}
 
-{% block page_title %}Overview{% endblock %}
+{% block page_header %}
+  {# to make searchable false, just remove it from the include statement #}
+  {% include "_page_header.html" with title="Overview" %}
+{% endblock page_header %}
 
 {% block dash_main %}
   <div id="usage">
