--- a/openstack-dashboard/dashboard/templates/syspanel_tenants.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenants.html
@@ -6,7 +6,11 @@
   {% endwith %}
 {% endblock %}
 
-{% block page_title %}Manage Tenants{% endblock %}
+{% block page_header %}
+  {% url syspanel_tenants as refresh_link %}
+  {# to make searchable false, just remove it from the include statement #}
+  {% include "_page_header.html" with title="Tenants" refresh_link=refresh_link searchable="true" %}
+{% endblock page_header %}
 
 {% block syspanel_main %}
   {% include "_syspanel_tenant_list.html" %}
