--- a/openstack-dashboard/dashboard/templates/syspanel_flavors.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_flavors.html
@@ -6,8 +6,11 @@
   {% endwith %}
 {% endblock %}
 
-{% block page_title %}Flavors{% endblock %}
-{% block refresh_link %}{% url syspanel_flavors %}{% endblock refresh_link %}
+{% block page_header %}
+  {% url syspanel_flavors as refresh_link %}
+  {# to make searchable false, just remove it from the include statement #}
+  {% include "_page_header.html" with title="Flavors" refresh_link=refresh_link searchable="true" %}
+{% endblock page_header %}
 
 {% block syspanel_main %}
   {% include "_syspanel_flavor_list.html" %}
