--- a/openstack-dashboard/dashboard/templates/syspanel_images.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_images.html
@@ -6,8 +6,11 @@
   {% endwith %}
 {% endblock %}
 
-{% block page_title %}Images{% endblock %}
-{% block refresh_link %}{% url syspanel_images %}{% endblock refresh_link %}
+{% block page_header %}
+  {% url syspanel_images as refresh_link %}
+  {# to make searchable false, just remove it from the include statement #}
+  {% include "_page_header.html" with title="Images" refresh_link=refresh_link searchable="true" %}
+{% endblock page_header %}
 
 {% block syspanel_main %}
   {% include "_syspanel_image_list.html" %}
