--- a/openstack-dashboard/dashboard/templates/syspanel_services.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_services.html
@@ -6,7 +6,11 @@
   {% endwith %}
 {% endblock %}
 
-{% block page_title %}Services{% endblock %}
+{% block page_header %}
+  {% url syspanel_services as refresh_link %}
+  {# to make searchable false, just remove it from the include statement #}
+  {% include "_page_header.html" with title="Services" refresh_link=refresh_link searchable="true" %}
+{% endblock page_header %}
 
 {% block syspanel_main %}
   {% include "_syspanel_service_list.html" %}
