--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_quotas.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_quotas.html
@@ -6,7 +6,9 @@
   {% endwith %}
 {% endblock %}
 
-{% block page_title %}Update Tenant Quotas{% endblock %}
+{% block page_header %}
+  {% include "_page_header.html" with title="Update Tenant Quotas" %}
+{% endblock page_header %}
 
 {% block syspanel_main %}
   <div class="dash_block wide form">
