--- a/openstack-dashboard/dashboard/templates/syspanel_user_update.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_user_update.html
@@ -6,7 +6,10 @@
   {% endwith %}
 {% endblock %}
 
-{% block page_title %}Update Users{% endblock %}
+{% block page_header %}
+  {# to make searchable false, just remove it from the include statement #}
+  {% include "_page_header.html" with title="Update User" %}
+{% endblock page_header %}
 
 {% block syspanel_main %}
   <div class="dash_block wide form">
