--- a/openstack-dashboard/dashboard/templates/syspanel_users.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_users.html
@@ -6,8 +6,11 @@
   {% endwith %}
 {% endblock %}
 
-{% block page_title %}Users{% endblock %}
-{% block refresh_link %}{% url syspanel_users %}{% endblock refresh_link %}
+{% block page_header %}
+  {% url syspanel_users as refresh_link %}
+  {# to make searchable false, just remove it from the include statement #}
+  {% include "_page_header.html" with title="Users" refresh_link=refresh_link searchable="true" %}
+{% endblock page_header %}
 
 {% block syspanel_main %}
 
