--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_usage.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_usage.html
@@ -1,4 +1,6 @@
 {% extends 'syspanel_base.html' %}
+{% load parse_date %}
+{% load sizeformat %}
 
 {% block sidebar %}
   {% with current_sidebar="tenants" %}
@@ -54,14 +56,6 @@
     {% if usage.instances %}
       <div class='table_title wide'>
         <h3>Tenant Usage: {{tenant_id}}</h3>
-        <div class='search'>
-          <form action='' method='post'>
-            <fieldset>
-              <label for='table_search'>Search</label>
-              <input id='table_search' name='search' type='text' value='' />
-            </fieldset>
-          </form>
-        </div>
       </div>
 
       <table class="wide">
