lots of changes to style

--- a/openstack-dashboard/dashboard/templates/_instance_list.html
+++ b/openstack-dashboard/dashboard/templates/_instance_list.html
@@ -1,6 +1,6 @@
 <!-- TODO(termie): move most of this to django_openstack -->
 {% load sizeformat %}
-<table id='instances'>
+<table id='instances' class="wide">
   <tr id='headings'>
     <th>ID</th>
     <th>Name</th>
